    interwiki prefix.  Reported by floatingworld.
  * Fix category redirects of the form "#REDIRECT [[Category:Example]]".

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


1.0.4
=====

New Features:

  * None.

Bugfixes:

  * Fix a template parser issue when parsing content of the form
    "{{{{PAGENAME}}/info}}".  Reported by felipeavilis.

Translation Updates:

  * None.


1.0.3
=====

New Features:

  * None.

Bugfixes:

  * Fix an XSS vulnerability with the search results page (Maxim Valyanskiy).
  * Fix an XSS vulnerability with the user contributions page (Maxim
    Valyanskiy).

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).


1.0.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix MS SQL errors on the Special:ImageList and similar pages.  Fix provided
    by Scott Barlow and Filip Rysavy.

Translation Updates:

  * Updated German translations (axelclk).


1.0.1
=====

Bugfixes:

  * Fix a locking issue with Lucene that could prevent the search index from
    being updated when topics are changed immediately after upgrading.
  * Update ASA database support for JAMWiki version 1.0.x, tested with SQL
    Anywhere 11.0.1 (dallas).
  * Fix the subst: tag to properly substitute content when a topic is saved.
    Reported by Gregory Brown.
  * Namespaces should be handled case-insensitive, but instead variations in
    case-sensitivity could throw IllegalArgumentException.  Reported by Quynh
    Nguyen and Tan-Vinh Nguyen.

Translation Updates:

  * Updated German translations (axelclk).


1.0.0
=====

New Features:

  * Add an option to specify a "shared file repository" from the Special:Admin
    page. If set, then any virtual wiki will be able to access images from the
    "shared" virtual wiki as if they were on the same virtual wiki.
  * Use a new algorithm for image resizing to greatly improve image quality.