@@ -1,11 +1,11 @@
-#Thu Dec 30 22:34:01 PST 2010
+#Tue May 24 02:27:21 PDT 2011
 admin.action.refresh=Od\u015Bwie\u017C indeks wyszukiwania
 admin.action.save=Zapisz zmiany
-admin.adduser.caption.adduser=Add new Account
+admin.adduser.caption.adduser=Nowe konto
 admin.adduser.caption.displayname=Display Name
 admin.adduser.caption.email=E-Mail
-admin.adduser.caption.login=User Login
-admin.adduser.caption.password=Password
+admin.adduser.caption.login=Login
+admin.adduser.caption.password=Has\u0142o
 admin.adduser.caption.passwordconfirm=Confirm User Password
 admin.adduser.message.success=Login {0} successfully added\!
 admin.adduser.message.uidexists=An User with Login {0} already exists\!
@@ -18,10 +18,10 @@ admin.cache.help.individualsize=Maksymalna liczba element\u00F3w sk\u0142adowany
 admin.cache.help.totalsize=Maksymalna liczba element\u00F3w sk\u0142adowanych w pami\u0119ci dla wszystkich typ\u00F3w.<br />Wi\u0119ksza warto\u015B\u0107 poprawia wydajno\u015B\u0107 systemu kosztem wi\u0119kszego zu\u017Cycia pami\u0119ci operacyjnej.
 admin.cache.help.xmlconfig=<b>Advanced users only</b>\: expert users who need advanced cache configurations may create an <code>ehcache.xml</code> configuration file which will override any cache settings configured below.  See <a href\="http\://ehcache.org/">ehcache.org</a> for details.
 admin.cache.message.clearfailed=Problem z czyszczeniem pami\u0119ci cache\: {0}.
-admin.caption.adduser=Add
-admin.caption.date.dateandtime=Date and time pattern
-admin.caption.date.dateonly=Date-only pattern
-admin.caption.date.timeonly=Time-only pattern
+admin.caption.adduser=Dodaj
+admin.caption.date.dateandtime=Wzorzec daty i czasu
+admin.caption.date.dateonly=Tylko wzorzec daty
+admin.caption.date.timeonly=Tylko wzorzec czasu
 admin.caption.defaulttopic=Domy\u015Blny temat
 admin.caption.editor=Domy\u015Blny edytor
 admin.caption.externallinknewwindow=Otwieraj zewn\u0119trzne linki w nowym oknie
@@ -37,7 +37,7 @@ admin.caption.recentchanges=Od\u015Bwie\u017C ostatnie zmiany
 admin.caption.recentchangesdefault=Domy\u015Blna liczba wy\u015Bwietlanych ostatnich zmian
 admin.caption.reset=Resetuj
 admin.caption.searchengine=Search Engine
-admin.caption.serverurl=Server URL
+admin.caption.serverurl=URL serwera
 admin.caption.sitename=Nazwa strony
 admin.caption.spamfilter=Od\u015Bwie\u017C definicje filtru antyspamowego
 admin.caption.usepreview=U\u017Cyj podgl\u0105du
@@ -111,6 +111,7 @@ admin.parser.caption.allowhtml=Zezwalaj na HTML
 admin.parser.caption.allowjavascript=Zezwalaj na Javascript
 admin.parser.caption.allowtemplates=Zezwalaj na szablony Wiki
 admin.parser.caption.interwikiinline=Display interwiki links inline
+admin.parser.caption.numberedhtmllinks=Use numbered HTML links
 admin.parser.caption.signaturedate=Wzorzec dla dat w podpisach
 admin.parser.caption.signatureuser=Wzorzec nazw u\u017Cytkownik\u00F3w w podpisach
 admin.parser.caption.tableofcontents=U\u017Cyj spis\u00F3w tre\u015Bci
@@ -118,6 +119,7 @@ admin.parser.caption.tableofcontentsdepth=Maksymalne zagnie\u017Cd\u017Cenie spi
 admin.parser.caption.virtualwikiinline=Display virtual wiki links inline
 admin.parser.help.allowcapitalized=Treat capitalized and lowercase topics as the same value.  If this option is not selected then "Topic" and "topic" are treated as two different records.  Note that even if this option is enabled it is still possible to create two topics that vary only in capitalization, in which case the records will be treated as two distinct topics.
 admin.parser.help.interwikiinline=If this option is selected then all interwiki links will be displayed inline with article text.  If it is not selected then interwiki links will be displayed in a box in the left navigation (links preceded by a colon such as "[[\:interwiki\:Topic]]" will always be displayed inline).
+admin.parser.help.numberedhtmllinks=Select this option to display HTML links of the form "[http\://example.com]" using numbered links such as "[1]".  De-selecting this option will cause the URL to be displayed as the link text.
 admin.parser.help.signaturedate=Zobacz dokumentacj\u0119 klasy java.text.SimpleDateFormat aby uzyska\u0107 informacj\u0119 o budowaniu wzorc\u00F3w.
 admin.parser.help.signatureuser=Klucz\: {0} \= strona u\u017Cytkownika; {1} \= edycje u\u017Cytkownika; {2} \= komentarze u\u017Cytkownika; {3} \= login u\u017Cytkownika; {4} \= nazwa wy\u015Bwietlana u\u017Cytkownika; {5} \= email u\u017Cytkownika; {6} \= identyfikator u\u017Cytkownika
 admin.parser.help.tableofcontentsdepth=Warto\u015Bci 1-6 okre\u015Blaj\u0105 g\u0142\u0119boko\u015B\u0107 zagnie\u017Cd\u017Cenia spis\u00F3w tre\u015Bci.
@@ -135,9 +137,11 @@ admin.persistence.caption=Spos\u00F3b zapisu danych
 admin.persistence.caption.driver=Klasa sterownika JDBC
 admin.persistence.caption.maxactive=Maks. liczba aktywnych po\u0142\u0105cze\u0144
 admin.persistence.caption.maxidle=Maks. liczba bezczynnych po\u0142\u0105cze\u0144
+admin.persistence.caption.maxopenpreparedstatements=Max number of open prepared statements
 admin.persistence.caption.minevictableidletime=Min. czas bezczynno\u015Bci przed odrzuceniem bezczynnego po\u0142\u0105czenia (sekundy)
 admin.persistence.caption.numtestsperevictionrun=Liczba pr\u00F3b na cykl odrzucania
 admin.persistence.caption.pass=Has\u0142o bazy danych
+admin.persistence.caption.poolpreparedstatements=Pool prepared statements
 admin.persistence.caption.testonborrow=Testuj wydawane po\u0142\u0105czenia przy
 admin.persistence.caption.testonreturn=Testuj powrotne po\u0142\u0105czenia
 admin.persistence.caption.testwhileidle=Testuj bezczynne po\u0142\u0105czenia
@@ -149,12 +153,14 @@ admin.persistence.caption.whenexhaustedaction=Czynno\u015B\u0107 wykonywana przy
 admin.persistence.caption.whenexhaustedaction.block=Blokowanie
 admin.persistence.caption.whenexhaustedaction.fail=Niepowodzenie
 admin.persistence.caption.whenexhaustedaction.grow=Zwi\u0119kszenie
+admin.persistence.help.maxopenpreparedstatements=This parameter only has an effect when prepared statements are pooled.  A larger value may improve performance but will use more system resources and could cause a database connection to run out of cursors.  Any non-positive number will allow unlimited pooled prepared statements.
 admin.persistence.help.minevictableidletime=Minimum idle time (in seconds) before evicting idle connections from the connection pool.
 admin.persistencetype.database=Zewn\u0119trzna baza danych
 admin.persistencetype.internal=Wewn\u0119trzna baza danych
 admin.rss.caption.allowed=Zezwalaj na RSS
 admin.rss.caption.title=Tytu\u0142 RSS
 admin.searchengine.lucene=Lucene Search Engine
+admin.searchengine.rankingalgorithm=RankingAlgorithm Search Engine
 admin.smtp.caption=SMTP
 admin.smtp.caption.host=Host
 admin.smtp.caption.pass=Has\u0142o
@@ -223,7 +229,7 @@ admin.vwiki.title.defaultvirtualwiki=Default Virtual Wiki
 admin.vwiki.title.interwiki=Interwiki Links
 admin.vwiki.title.interwiki.add=Add Interwiki Link
 admin.vwiki.title.interwiki.update=Update/Delete Interwiki Links
-admin.vwiki.title.namespace.add=Add New Namespace
+admin.vwiki.title.namespace.add=Dodaj Namespace
 admin.vwiki.title.namespace.translations=Namespace Translations
 admin.vwiki.title.select=Select Virtual Wiki
 admin.vwiki.title.virtualwiki=Add/Update Virtual Wiki
@@ -238,6 +244,7 @@ common.cancel=Anuluj
 common.caption.diff=diff
 common.caption.experimental=eksperymentalnie
 common.caption.history=historia
+common.caption.universaledit=Click to edit {0}
 common.caption.view=Widok
 common.change=Zmie\u0144
 common.continue=Dalej
@@ -256,6 +263,7 @@ common.migrate=Migracja
 common.move=Przeniesienie
 common.name=Nazwa
 common.namespace=Namespace
+common.namespace.main=(Main)
 common.pagination.next=Nast\u0119pne {0}
 common.pagination.previous=Poprzednie {0}
 common.pagination.results=Liczba wynik\u00F3w na stronie
@@ -333,7 +341,7 @@ footer.message.version=Wersja
 generalmenu.jumpto=Id\u017A do
 generalmenu.search=Szukaj
 generalmenu.title.interwiki=Other Sites
-generalmenu.title.virtualwiki=Other Languages
+generalmenu.title.virtualwiki=Inne j\u0119zyki
 history.caption.diffnext=nast\u0119pne
 history.caption.diffprevious=poprzednie
 history.diff=Por\u00F3wnaj wybrane
@@ -360,15 +368,16 @@ linkto.title=Linki do {0}
 log.caption.log.all=Wszystkie logi
 log.caption.log.deletion=Log usuwania
 log.caption.log.import=Import log
-log.caption.log.move=Move log
-log.caption.log.permission=Permission log
+log.caption.log.move=Log przeniesie\u0144
+log.caption.log.permission=Log uprawnie\u0144
 log.caption.log.upload=Upload log
-log.caption.log.user=User creation log
+log.caption.log.user=Log tworzenia u\u017Cytkownik\u00F3w
 log.caption.logs=Logi
 log.message.deletion=Artyku\u0142 {0} usuni\u0119to
 log.message.import=Artyku\u0142 {0} zaimportowany
 log.message.move=Nazwa artyku\u0142u {0} zmieniona na {1}
 log.message.permission=Permissions updated for topic {0}
+log.message.purge=Version deleted for topic {0}
 log.message.undeletion=Artyku\u0142 {0} odtworzony
 log.message.upload=Plik {0} wczytany
 log.message.user=Utworzono konto u\u017Cytkownika
@@ -379,6 +388,7 @@ login.message.edit=Edycja wymaga zalogowania.
 login.message.editadmin=Aby edytowa\u0107 {0}, musisz zalogowa\u0107 si\u0119 z uprawnieniami administratora.
 login.message.editnew=Nie masz uprawnie\u0144 to tworzenia nowych artyku\u0142\u00F3w.
 login.message.move=Nie masz uprawnie\u0144 do przeniesienia {0}.
+login.message.purge=You do not have permission to delete topic versions.
 login.password=Has\u0142o
 login.rememberme=Pami\u0119taj mnie
 login.submit=Login
@@ -387,13 +397,19 @@ login.username=Nazwa u\u017Cytkownika
 manage.caption.adminonly=Tylko dla Admina
 manage.caption.delete=Usu\u0144 {0}
 manage.caption.permissions=Uprawnienia
+manage.caption.purge=Delete Topic Versions
+manage.caption.purgeconfirm=Are you sure you want to delete the version(s)?  This action cannot be undone.
+manage.caption.purgeselect=Select version(s) to delete
 manage.caption.readonly=Tylko do odczytu
 manage.caption.undelete=Przywr\u00F3\u0107 usuni\u0119ty artyku\u0142 {0}
 manage.delete.commentspage=Usu\u0144 powi\u0105zane strony z komentarzami
 manage.delete.reason=Pow\u00F3d usuni\u0119cia
 manage.delete.warning=<b>OSTRZE\u017BENIE</b>\: Usuni\u0119cie artyku\u0142u lub obrazu powoduje wykasowanie plik\u00F3w z systemu. Zastan\u00F3w si\u0119, czy chcesz wykona\u0107 operacj\u0119 usuni\u0119cia.
 manage.message.permissions=Uprawnienia do strony zaktualizowane
+manage.message.purge={0} topic versions have been permanently deleted for topic {1}.
 manage.message.updated=Artyku\u0142 {0} zosta\u0142 zaktualizowany.
+manage.purge.noversion=At least one topic version must be selected.
+manage.purge.warning=<b>WARNING</b>\: Deleting a topic version removes the record from the database and <b>cannot be undone</b>.  It is recommended that this functionality only be used for deleting records containing sensitive data or other content that should not be viewable to any users.
 manage.title=Zarz\u0105dzaj {0}
 manage.undelete.commentspage=Przywr\u00F3\u0107 powi\u0105zane strony z komentarzami
 manage.undelete.reason=Pow\u00F3d przywr\u00F3cenia
@@ -409,6 +425,8 @@ move.exception.permission=Artyku\u0142 {0} jest chroniony i nie mo\u017Ce by\u01
 move.overview=Strona umo\u017Cliwia przeniesienie zawarto\u015Bci (oraz historii) pod now\u0105 nazw\u0119.  Odczyt starej nazwy b\u0119dzie automatycznie przekierowywany do nowej strony.
 move.title=Przeniesienie {0}
 orphaned.title=Strony porzucone
+purge.error.noversion=No topic version with an id of {0} exists.
+purge.error.onlyversion=Topic version {0} is the only version for topic {1} and thus can only be removed by deleting the topic.
 recentchanges.caption.comments=komentarze
 recentchanges.caption.contributions=edycje
 recentchanges.caption.rss=RSS
@@ -467,8 +485,11 @@ roles.message.roleupdated=Rola {0} zosta\u0142a zaktualizowana.
 roles.message.sysadminremove=You may not remove ROLE_SYSADMIN from your own account.  This feature is implemented as a safety measure to ensure that the wiki always has at least one sysadmin.
 roles.message.userroleupdate=Aktualizacja r\u00F3l dla u\u017Cytkownika/u\u017Cytkownik\u00F3w zako\u0144czona powodzeniem.
 roles.title=U\u017Cytkownik/Grupy r\u00F3l
+search.caption.namespaces=Filter search results by namespace
 search.for=Szukaj\:
 search.hints=Hints\:<br />You can use * and ? as wildcards.<br />If you attach ~ to a word, you do a fuzzy search.<br />You can use AND, OR. Grouping is allowed using ( )<br />Emphasize a word using +, use - if a word should not be in the index.<br /><a href\="http\://lucene.apache.org/java/2_4_0/queryparsersyntax.html" target\="_blank">more on search query terms</a><br />
+search.logo.lucene=<a href\="http\://lucene.apache.org/java/"><img src\="../images/lucene_green_100.gif" alt\="Lucene" border\="0" /></a>
+search.logo.rankingalgorithm=<font size\="3"><b><a href\=http\://rankingalgorithm.tgels.com>RankingAlgorithm</a></b></font>
 search.poweredby=Search powered by
 search.search=Szukaj
 search.title=Szukaj
@@ -500,7 +521,7 @@ specialpages.caption.recentchanges=Ostatnie zmiany
 specialpages.caption.roles=Role
 specialpages.caption.search=Szukaj
 specialpages.caption.setup=Wiki setup
-specialpages.caption.topicsadmin=Admin-only topics
+specialpages.caption.topicsadmin=Artyku\u0142y dla Admina
 specialpages.caption.translation=T\u0142umaczenie
 specialpages.caption.upgrade=Wiki upgrade
 specialpages.caption.upload=Upload
@@ -526,6 +547,7 @@ tab.common.move=Przenie\u015B
 tab.common.print=Drukuj
 tab.common.special=Specjalne
 tab.common.unwatch=Nie obserwuj
+tab.common.viewsource=\u0179r\u00F3d\u0142o
 tab.common.watch=Obserwuj
 topic.caption.editlegend=Kontrolki edycyjne
 topic.categories=Kategorie
@@ -555,6 +577,7 @@ upgrade.caption.detected=An upgrade to JAMWiki has been installed.
 upgrade.caption.login=Aby zako\u0144czy\u0107 proces uaktualnienia, zaloguj si\u0119 jako admin.
 upgrade.caption.manual=To upgrade manually rather than using the automatic process see the <code>UPGRADE.txt</code> document included in the root of the WAR file.
 upgrade.caption.releasenotes=The release notes for this release are available at <a href\="http\://jamwiki.org/">jamwiki.org</a>.  The <code>CHANGELOG.txt</code> file for this release is included in the root of the WAR file.
+upgrade.caption.search=This release upgrades the search index.  Sites with more than {0} topics will need to use the tools on the Special\:Maintenance page to manually rebuild the search index.
 upgrade.caption.stylesheet=This upgrade will overwrite the current StyleSheet topic.  If you need to restore the previous version it can be retrieved from the topic's history after the ugprade completes.
 upgrade.caption.upgradecomplete=Uaktualnienie zako\u0144czone powodzeniem\: {0}
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href\="http\://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
@@ -562,6 +585,8 @@ upgrade.error.fatal=A fatal error has occurred while upgrading the system.  Plea
 upgrade.error.nonfatal=An optional step has failed while upgrading the system.  The upgrade will continue and the system will function normally, but view the logs to determine what steps may have failed.  Please see the <code>/WEB-INF/UPGRADE.txt</code> document for manual upgrade steps and report any errors in the logs at <a href\="http\://jamwiki.org/">jamwiki.org</a>.  The error message is\: {0}
 upgrade.error.notrequired=Uaktualnienie nie jest potrzebne.
 upgrade.error.oldversion=Uaktualnienie do wersji {0} z wersji starszych ni\u017C {1} nie jest mo\u017Cliwe.
+upgrade.error.search.refresh=The search engine has been upgraded.  Please use the tools on the Special\:Maintenance page to rebuild your search index.
+upgrade.message.100.reparse=This upgrade requires re-parsing wiki content.  For sites with large amounts of content this may take 5-10 minutes or longer; <b>do not interrupt the upgrade process</b> or your wiki could be left in an unusable state.
 upgrade.message.100.topic.links=To complete the upgrade, please run the "Regenerate Topic Metadata Records" tool from the Special\:Maintenance page.  Note that it may take a long time to complete.
 upgrade.message.db.column.added=Dodano kolumn\u0119 "{0}" do tabeli "{1}".
 upgrade.message.db.column.dropped=Usuni\u0119to kolumn\u0119 "{0}" z tabeli "{1}".
@@ -572,6 +597,7 @@ upgrade.message.db.data.deleted=Usuni\u0119to rekordy z tabeli "{0}".
 upgrade.message.db.data.updated=Uaktualniono rekordy w tabeli "{0}".
 upgrade.message.db.table.added=Dodano tabel\u0119 "{0}".
 upgrade.message.db.table.dropped=Usuni\u0119to tabel\u0119 "{0}".
+upgrade.message.search.refresh=The search engine has been upgraded and your search index has been rebuilt.
 upgrade.message.stylesheet.failure=Non-fatal error while upgrading\: unable to update the JAMWiki stylesheet.  Please report any errors in the logs at <a href\="http\://jamwiki.org/">jamwiki.org</a>.  The error message is\: {0}
 upgrade.message.stylesheet.success=Updated stylesheet for virtual wiki "{0}".
 upgrade.title=Uaktualnienie JAMWiki {0} do JAMWiki {1}
@@ -592,6 +618,9 @@ usermenu.register=Rejestracja
 usermenu.user={0}
 usermenu.usercomments=Komentarze u\u017Cytkownika
 usermenu.watchlist=Obserwowane
+viewsource.caption.legend=Wiki markup for {0}
+viewsource.caption.overview=The wiki markup for {0} is displayed below.  To change this markup please use the "Edit" tab above.  If no "Edit" tab is present then you do not have permission to edit the current topic, and you will either need to login, or if you are already logged-in then please contact the administrator of this wiki and request permission to edit this topic.
+viewsource.title=\u0179r\u00F3d\u0142o dla {0}
 watchlist.caption.added=Artyku\u0142 <b>{0}</b> zosta\u0142 dodany do listy obserwowanych.
 watchlist.caption.empty=Twoja lista obserwowanych jest pusta.
 watchlist.caption.removed=Artyku\u0142 <b>{0}</b> zosta\u0142 usuni\u0119ty z twojej listy obserwowanych.
