@@ -51,11 +51,13 @@ New Features:
 Bugfixes:
 
   * Fix a template parser issue when parsing content of the form
-    "{{{{PAGENAME}}/info}}".  Reported by felipeavilis.
+    "{{{{PAGENAME}}/info}}".  Reported by Felipe Avilis.
+  * PDFs and other non-image files in the "Image:" namespace were not appearing
+    on Special:AllPages.  Reported by Felipe Avilis.
 
 Translation Updates:
 
-  * None.
+  * Updated Polish translations (dlpa).
 
 
 1.0.3
